[package]
name = "skycalc"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["cargo", "derive"] }
libm = "0.2.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
log = "0.4.22"
